# code-parser

./: .gitignore  API_FOR_AI.md  Dockerfile  ENTRY_POINT_DETECTION_FLOW.md  README.md  README_RUN.md  debug_kotlin.py  docker-compose.yml  pyproject.toml  run.sh  test_decorator_parsing.py  test_entry_points.py  test_kotlin_argument_extraction.py  test_kotlin_queries.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_add_repo_tree_and_folder_structure.py  005_add_file_content.py  006_remove_flow_generator_tables.py  007_add_languages_column.py  008_add_symbol_position_info.py  009_add_performance_indexes.py  010_add_entry_point_tables.py  011_add_entry_point_flows.py  012_add_organizations_and_multitenancy.py  013_add_ai_config_to_organizations.py
docs/: kotlin_parser_dsl_arguments_issue.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: TreeView.jsx
frontend/src/pages/: Explore.jsx  OrgList.jsx  RepoDetail.jsx  RepoList.jsx  SymbolDetail.jsx  SymbolLookup.jsx
scripts/: analyze_candidates.py  rebuild-app.sh
src/code_parser/: __init__.py  config.py  logging.py  main.py
src/code_parser/api/: __init__.py  app.py  dependencies.py  schemas.py
src/code_parser/api/routes/: __init__.py  explore.py  (+6 more)
src/code_parser/core/: __init__.py  models.py
src/code_parser/database/: __init__.py  connection.py  models.py
src/code_parser/entry_points/: __init__.py  framework_detector.py  query_executor.py
src/code_parser/parsers/: __init__.py  base.py  java_parser.py  javascript_parser.py  kotlin_parser.py  python_parser.py  registry.py  rust_parser.py
src/code_parser/repositories/: __init__.py  entry_point_repository.py  file_repository.py  flow_repository.py  job_repository.py  org_repository.py  repo_repository.py  symbol_repository.py
src/code_parser/services/: __init__.py  ai_service.py  entry_point_service.py  entry_point_service_old.py  file_discovery.py  flow_service.py  graph_service.py  parsing_service.py
src/code_parser/workers/: __init__.py  manager.py
tests/: __init__.py  conftest.py
tests/unit/: test_parsers.py
(+6 files in other folders)
